tests/miniJava/neg/006649_mutation.MiniJava
class java { public static void Main 0 String [ ] java ) { { } } }
